<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="25dp"
    tools:context="com.example.p.cityguide.Login">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/logomain" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginLogo"
        android:layout_marginTop="45dp"
        android:hint="@string/email"
        android:inputType="text"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="@color/buttonColor"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/noAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/loginLogo"
        android:layout_alignRight="@+id/loginLogo"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="35dp"
        android:text="@string/noaccount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/noAcc"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/noAcc"
        android:layout_toRightOf="@+id/noAcc"
        android:onClick="signUp"
        android:text="@string/signup"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


</RelativeLayout>
