<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context="com.example.p.cityguide.SignUp">

    <ImageView
        android:id="@+id/signuplogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logomain" />

    <include
        android:id="@+id/businesstoolbar"
        layout="@layout/toolbar_trans"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/businesstoolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/businesstoolbar"
        android:layout_below="@+id/signuplogo"
        android:layout_marginTop="30dp"
        android:hint="@string/firstname"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editFirstName"
        android:layout_below="@+id/editFirstName"
        android:layout_marginTop="30dp"
        android:hint="@string/lastname"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editLastName"
        android:layout_below="@+id/editLastName"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editEmailId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editEmailId"
        android:layout_below="@+id/editEmailId"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPass"
        android:layout_marginTop="30dp"
        android:background="@color/buttonColor"
        android:onClick="Validate"
        android:text="@string/signup"
        android:textColor="@color/colorAccent" />


</RelativeLayout>
